# lykos

./: .gitignore  Cargo.toml  README.md
frontend/: .gitignore  package-lock.json  package.json  packages.dhall  spago.dhall
frontend/src/: Command.purs  Main.js  Main.purs  Output.purs  WebSocket.js  WebSocket.purs
frontend/static/: index.html  index.js
src/: error.rs  lib.rs  main.rs  registry.rs  runtime.rs  stdio_forwarder.rs
