[package]
name = "lykos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["macros"] }
base64 = "0.21.4"
clap = { version = "4.4.3", features = ["derive"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.4", features = ["fs"] }
uuid = { version = "1.4.1", features = ["v4"] }
wasi-common = "12.0.2"
wasmtime = "12.0.2"
wasmtime-wasi = "12.0.2"
